add global oauth for quality.yml

--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -1,3 +1,11 @@
+name: PHP Code Quality
+
+on:
+  pull_request:
+  push:
+    branches:
+      - main
+
 jobs:
   code-analysis:
     name: Code Analysis
