--- a/.gitattributes
+++ b/.gitattributes
@@ -1,17 +1,21 @@
 # Do not export those files in the Composer archive (lighter dependency)
-.gitattributes export-ignore
 .github/ export-ignore
-.gitignore export-ignore
-CHANGELOG.md export-ignore
-README.md export-ignore
-SECURITY.md export-ignore
-composer.lock export-ignore
-ecs.php export-ignore
-package-lock.json export-ignore
-package.json export-ignore
-phpstan.neon export-ignore
-stubs/ export-ignore
+phpstan/ export-ignore
 tests/ export-ignore
+
+.gitattributes export-ignore
+.gitignore export-ignore
+.php-cs-fixer.dist.php export-ignore
+CHANGELOG.md export-ignore
+composer.lock export-ignore
+composer-dependency-analyser.php export-ignore
+CONTRIBUTING.md export-ignore
+package.json export-ignore
+package-lock.json export-ignore
+phpstan.dist.neon export-ignore
+phpunit.xml.dist export-ignore
+README.md export-ignore
+rector.php export-ignore
 
 # Auto-detect text files and perform LF normalization
 * text=auto
