Fix Cs following weglot standard

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,10 @@
 *Thumbs.db
 ###< common ###
 
-.env
+###> cache ###
+.cache
+/.php-cs-fixer.cache
+###< cache ###
 
 ###> composer ###
 auth.json
@@ -16,16 +19,9 @@ auth.json
 /node_modules
 ###< npm ###
 
-###> friendsofphp/php-cs-fixer ###
+###> local ###
+.env
 /.php-cs-fixer.php
-/.php-cs-fixer.cache
-###< friendsofphp/php-cs-fixer ###
-
-###> phpstan/phpstan ###
 phpstan.neon
-###< phpstan/phpstan ###
-
-###> phpunit/phpunit ###
 /phpunit.xml
-/.phpunit.cache/
-###< phpunit/phpunit ###
+###< local ###
