--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -65,9 +65,8 @@ jobs:
       - name: Analyse Composer dependencies
         run: vendor/bin/composer-dependency-analyser
 
-# TODO
-#      - name: Check coding style (PHP-CS-Fixer)
-#        run: vendor/bin/php-cs-fixer fix --dry-run --diff
+      - name: Check coding style (PHP-CS-Fixer)
+        run: vendor/bin/php-cs-fixer fix --dry-run --diff
 
       - name: Check for refactoring (Rector)
         run: vendor/bin/rector process --dry-run --no-progress-bar
