--- a/phpstan.dist.neon
+++ b/phpstan.dist.neon
@@ -3,6 +3,7 @@ includes:
 
 parameters:
     level: 6
+    tmpDir: .cache/phpstan
     scanFiles:
         - vendor/craftcms/cms/src/Craft.php
         - vendor/yiisoft/yii2/Yii.php
