--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     "phpunit/phpunit": "^11.5",
     "rector/rector": "^2.1",
     "shipmonk/composer-dependency-analyser": "^1.8",
-    "symplify/easy-coding-standard": "^10.3"
+    "symplify/easy-coding-standard": "^10.3",
+    "tomasvotruba/type-coverage": "^2.0"
   },
   "autoload": {
     "psr-4": {
@@ -55,7 +56,8 @@
     },
     "allow-plugins": {
       "yiisoft/yii2-composer": true,
-      "craftcms/plugin-installer": true
+      "craftcms/plugin-installer": true,
+      "phpstan/extension-installer": true
     }
   },
   "repositories": [
