--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -1,10 +1,11 @@
 name: PHP Code Quality
+run-name: Code analysis for ${{ github.ref_name }}
 
 on:
     pull_request:
     push:
         branches:
-            - main
+            - master
 
 jobs:
     code-analysis:
@@ -13,7 +14,7 @@ jobs:
 
         steps:
             - name: Checkout code
-              uses: actions/checkout@v4
+              uses: actions/checkout@v5
 
             - name: Setup PHP
               uses: shivammathur/setup-php@v2
@@ -21,11 +22,6 @@ jobs:
                   php-version: '8.2'
                   extensions: iconv, json
                   coverage: xdebug
-              env:
-                  COMPOSER_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-            - name: Configure Composer auth (GitHub PAT with repo access)
-              run: composer config --global --auth github-oauth.github.com ${{ secrets.GH_TOKEN }}
 
             - name: Get composer cache directory
               id: composer-cache
@@ -37,18 +33,6 @@ jobs:
                   path: ${{ steps.composer-cache.outputs.dir }}
                   key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
                   restore-keys: ${{ runner.os }}-composer-
-
-            - name: Set up SSH
-              run: |
-                  eval "$(ssh-agent -s)"
-                  mkdir -p ~/.ssh
-                  echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-                  chmod 600 ~/.ssh/id_rsa
-                  ssh-add ~/.ssh/id_rsa
-                  echo "${{ secrets.SIMPLE_HTML_DOM_PRIVATE_KEY }}" > ~/.ssh/simple_html_dom
-                  chmod 600 ~/.ssh/simple_html_dom
-                  ssh-add ~/.ssh/simple_html_dom
-                  ssh-keyscan github.com >> ~/.ssh/known_hosts
 
             - name: Clear Composer cache
               run: composer clear-cache
@@ -62,8 +46,9 @@ jobs:
             - name: Check for security vulnerabilities
               run: composer audit
 
-            - name: Analyse Composer dependencies
-              run: vendor/bin/composer-dependency-analyser
+            # TODO SOON
+            # - name: Analyse Composer dependencies
+            #   run: vendor/bin/composer-dependency-analyser
 
             - name: Check coding style (PHP-CS-Fixer)
               run: vendor/bin/php-cs-fixer fix --dry-run --diff
@@ -71,5 +56,6 @@ jobs:
             - name: Check for refactoring (Rector)
               run: vendor/bin/rector process --dry-run --no-progress-bar
 
-            - name: Run static analysis (PHPStan)
-              run: vendor/bin/phpstan analyse --no-progress --no-interaction
+            # TODO SOON
+            # - name: Run static analysis (PHPStan)
+            #   run: vendor/bin/phpstan analyse --no-progress --no-interaction
