fix(ci): include CHANGELOG in artifacts and configure artifact handling

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -76,10 +76,11 @@ jobs:
             include-hidden-files: true
             path: |
               src/
-              README.md
-              LICENSE.md
+              CHANGELOG.md
               composer.json
               composer.lock
+              LICENSE.md
+              README.md
             if-no-files-found: error
             retention-days: 7
 
@@ -98,6 +99,8 @@ jobs:
         - name: Create release
           uses: ncipollo/release-action@v1
           with:
+            artifactErrorsFailBuild: true
+            artifacts: plugin
             body: ${{ github.event.client_payload.notes }}
             makeLatest: ${{ github.event.client_payload.latest }}
             name: ${{ github.event.client_payload.version }}
