--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -59,11 +59,16 @@ jobs:
         - name: Prefix with php-scoper
           run: |
             composer run php-scoper
+            mkdir -p src/vendor/weglot/
+            mv build/scoped-vendor/* src/vendor/weglot/
+
+        - name: Update composer.json
+          run: |
+            jq '.autoload."psr-4" += {"Weglot\\\\Vendor\\\\": "src/vendor/weglot/"}' composer.json > composer.tmp && mv composer.tmp composer.json
 
         - name: Verify autoload
           run: |
-            jq '.autoload."psr-4" += {"Weglot\\\\Vendor\\\\": "src/vendor/weglot/"}' composer.json > composer.tmp && mv composer.tmp composer.json
-            composer --quiet --no-ansi --no-interaction dump-autoload --optimize
+            composer --no-interaction dump-autoload --optimize
 
         - name: PHP Syntax check (lint)
           run: |
