--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -82,14 +82,7 @@ jobs:
           uses: actions/upload-artifact@v4
           with:
             name: plugin
-            include-hidden-files: true
-            path: |
-              src/
-              CHANGELOG.md
-              composer.json
-              composer.lock
-              LICENSE.md
-              README.md
+            path: plugin.zip
             if-no-files-found: error
             retention-days: 7
 
@@ -104,13 +97,13 @@ jobs:
           uses: actions/download-artifact@v4
           with:
             name: plugin
-            path: plugin.zip
+            path: plugin
         
         - name: Create release
           uses: ncipollo/release-action@v1
           with:
             artifactErrorsFailBuild: true
-            artifacts: "plugin.zip"
+            artifacts: "plugin/plugin.zip"
             body: ${{ github.event.client_payload.notes }}
             makeLatest: ${{ github.event.client_payload.latest }}
             name: ${{ github.event.client_payload.version }}
