--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,10 @@
   "autoload": {
     "psr-4": {
       "weglot\\craftweglot\\": "src/"
-    }
+    },"classmap": 
+    [
+      "src/vendor/weglot/build/"
+    ]
   },
   "extra": {
     "handle": "weglot",
