--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -52,6 +52,9 @@ jobs:
             php-version: '8.2'
             tools: composer:v2
 
+        - name: Prepare directory classmap
+          run: mkdir -p src/vendor/weglot/build/vendor-src/
+
         - name: Install Composer dependencies
           run: |
             composer --prefer-dist --no-progress --no-interaction install
