--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -55,12 +55,16 @@ jobs:
         - name: Prepare directory classmap
           run: mkdir -p src/vendor/weglot/build/vendor-src/
 
+        - name: Update composer.json
+          run: |
+              jq '.autoload."psr-4" += {"Weglot\\\\Vendor\\\\": "src/vendor/weglot/"} | .autoload.classmap = ["src/vendor/weglot/build/vendor-src/"]' composer.json > composer.tmp && mv composer.tmp composer.json
+
         - name: Install Composer dependencies
           run: |
             composer --prefer-dist --no-progress --no-interaction install
 
         - name: Remove build directory to avoid mv conflict
-          run: rm -rf src/vendor/weglot/build
+          run: rm -rf src/vendor/weglot
 
         - name: Prefix with php-scoper
           run: |
@@ -68,9 +72,6 @@ jobs:
             mkdir -p src/vendor/weglot/
             mv build/scoped-vendor/* src/vendor/weglot/
 
-        - name: Update composer.json
-          run: |
-            jq '.autoload."psr-4" += {"Weglot\\\\Vendor\\\\": "src/vendor/weglot/"} | .autoload.classmap = ["src/vendor/weglot/build/vendor-src/"]' composer.json > composer.tmp && mv composer.tmp composer.json
 
         - name: Verify autoload
           run: |
