Update composer.json rename craft plugin

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "weglot/craft-weglot",
+  "name": "weglot/craft-translate",
   "description": "Translate your Craft website in 110+ languages within minutes with Weglot Translate, without any coding.",
   "type": "craft-plugin",
   "license": "proprietary",
