--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "vite build --watch",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "keywords": [],
   "author": "",
@@ -15,5 +18,15 @@
   "dependencies": {
     "select2": "^4.1.0-rc.0",
     "selectize": "^0.12.6"
+  },
+  "devDependencies": {
+    "css-loader": "^7.1.2",
+    "mini-css-extract-plugin": "^2.9.4",
+    "sass": "^1.94.0",
+    "sass-loader": "^16.0.6",
+    "style-loader": "^4.0.0",
+    "vite": "^7.2.2",
+    "webpack": "^5.102.1",
+    "webpack-cli": "^6.0.1"
   }
 }
